Hanh Le - Initiate view module